--- a/CoffeeShopManager/GUI/frmChangePassword.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmChangePassword.vi-VN.resx
@@ -118,49 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="txtStatus.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
+  <data name="btnSaveChange.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
-  <data name="txtStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>117, 27</value>
-  </data>
-  <data name="txtCurrentReceipt.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
-  </data>
-  <data name="txtCurrentReceipt.Size" type="System.Drawing.Size, System.Drawing">
-    <value>117, 27</value>
+  <data name="btnSaveChange.Text" xml:space="preserve">
+    <value>Lưu</value>
   </data>
   <data name="label2.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>88, 19</value>
+    <value>148, 17</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value>ID Hóa đơn</value>
+    <value>Nhập lại mật khẩu mới</value>
   </data>
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 19</value>
+    <value>92, 17</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value>Trạng thái</value>
+    <value>Mật khẩu mới</value>
   </data>
-  <data name="lblTableID.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
+  <data name="lblPassword.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
-  <data name="lblTableID.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 19</value>
+  <data name="lblPassword.Size" type="System.Drawing.Size, System.Drawing">
+    <value>116, 17</value>
   </data>
-  <data name="lblTableID.Text" xml:space="preserve">
-    <value>ID Bàn</value>
+  <data name="lblPassword.Text" xml:space="preserve">
+    <value>Mật khẩu hiện tại</value>
   </data>
-  <data name="txtTableID.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Times New Roman, 10.2pt</value>
-  </data>
-  <data name="txtTableID.Size" type="System.Drawing.Size, System.Drawing">
-    <value>117, 27</value>
+  <data name="panel1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
 </root>
