--- a/CoffeeShopManager/GUI/UserControlStock.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlStock.vi-VN.resx
@@ -117,36 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="txtSearch.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
+  <data name="txtSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 27</value>
+  </data>
   <data name="txtSearch.Text" xml:space="preserve">
     <value>Tìm kiếm...</value>
+  </data>
+  <data name="cboSearch.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
   </data>
   <data name="cboSearch.Items1" xml:space="preserve">
     <value>Tên</value>
   </data>
   <data name="cboSearch.Items2" xml:space="preserve">
-    <value>ID nhà cung</value>
+    <value>ID nhà cung cấp</value>
   </data>
   <data name="cboSearch.Items3" xml:space="preserve">
-    <value>Tên nhà cung</value>
+    <value>Tên nhà cung cấp</value>
+  </data>
+  <data name="cboSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>140, 27</value>
+  </data>
+  <data name="btnDelete.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
   </data>
   <data name="btnDelete.Text" xml:space="preserve">
     <value>Xóa</value>
   </data>
+  <data name="btnEdit.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
   <data name="btnEdit.Text" xml:space="preserve">
     <value>Sửa</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblStock.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 28.2pt</value>
+  </data>
   <data name="lblStock.Size" type="System.Drawing.Size, System.Drawing">
-    <value>195, 44</value>
+    <value>208, 55</value>
   </data>
   <data name="lblStock.Text" xml:space="preserve">
     <value>Kho hàng</value>
   </data>
+  <data name="btnAdd.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
   <data name="btnAdd.Text" xml:space="preserve">
     <value>Thêm</value>
   </data>
+  <data name="lblResetFilters.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt, style=Underline</value>
+  </data>
   <data name="lblResetFilters.Size" type="System.Drawing.Size, System.Drawing">
-    <value>109, 19</value>
+    <value>115, 19</value>
   </data>
   <data name="lblResetFilters.Text" xml:space="preserve">
     <value>Khởi tạo bộ lọc</value>
