--- a/CoffeeShopManager/GUI/UserControlSuppliers.resx
+++ b/CoffeeShopManager/GUI/UserControlSuppliers.resx
@@ -121,9 +121,6 @@
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
     <value>899, 574</value>
   </data>
-  <data name="lblResetFilters.Location" type="System.Drawing.Point, System.Drawing">
-    <value>697, 107</value>
-  </data>
   <data name="&gt;&gt;btnAdd.Name" xml:space="preserve">
     <value>btnAdd</value>
   </data>
@@ -133,11 +130,14 @@
   <data name="lblResetFilters.Font" type="System.Drawing.Font, System.Drawing">
     <value>Century Gothic, 7.8pt, style=Underline</value>
   </data>
-  <data name="cboSearch.Items2" xml:space="preserve">
-    <value>Email</value>
+  <data name="lblResetFilters.Location" type="System.Drawing.Point, System.Drawing">
+    <value>697, 107</value>
   </data>
   <data name="lblSuppliers.Font" type="System.Drawing.Font, System.Drawing">
     <value>Century Gothic, 22pt</value>
+  </data>
+  <data name="btnDelete.Text" xml:space="preserve">
+    <value>Delete</value>
   </data>
   <data name="lblSuppliers.Size" type="System.Drawing.Size, System.Drawing">
     <value>176, 44</value>
@@ -161,8 +161,8 @@
   <data name="lblResetFilters.TabIndex" type="System.Int32, mscorlib">
     <value>36</value>
   </data>
-  <data name="btnAdd.Text" xml:space="preserve">
-    <value>Add</value>
+  <data name="btnSearch.Location" type="System.Drawing.Point, System.Drawing">
+    <value>801, 74</value>
   </data>
   <data name="&gt;&gt;txtSearch.Parent" xml:space="preserve">
     <value>$this</value>
@@ -179,11 +179,14 @@
   <data name="grdSup.Location" type="System.Drawing.Point, System.Drawing">
     <value>92, 154</value>
   </data>
-  <data name="btnDelete.Text" xml:space="preserve">
-    <value>Delete</value>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
+    <value>8, 16</value>
   </data>
   <data name="txtSearch.TabIndex" type="System.Int32, mscorlib">
     <value>33</value>
+  </data>
+  <data name="cboSearch.Items2" xml:space="preserve">
+    <value>Email</value>
   </data>
   <data name="&gt;&gt;lblResetFilters.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -219,6 +222,9 @@
   <data name="btnEdit.Location" type="System.Drawing.Point, System.Drawing">
     <value>628, 485</value>
   </data>
+  <data name="btnAdd.Text" xml:space="preserve">
+    <value>Add</value>
+  </data>
   <data name="btnSearch.TabIndex" type="System.Int32, mscorlib">
     <value>34</value>
   </data>
@@ -228,16 +234,7 @@
   <data name="lblResetFilters.Size" type="System.Drawing.Size, System.Drawing">
     <value>86, 19</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
-  </data>
   <data name="btnEdit.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="btnSearch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>801, 74</value>
-  </data>
-  <data name="btnSearch.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
   <data name="&gt;&gt;btnDelete.Name" xml:space="preserve">
@@ -254,6 +251,9 @@
   </data>
   <data name="btnDelete.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
+  </data>
+  <data name="&gt;&gt;btnEdit.ZOrder" xml:space="preserve">
+    <value>6</value>
   </data>
   <data name="lblSuppliers.Text" xml:space="preserve">
     <value>Suppliers</value>
@@ -586,8 +586,8 @@
   <data name="grdSup.RowHeadersWidth" type="System.Int32, mscorlib">
     <value>51</value>
   </data>
-  <data name="cboSearch.Items1" xml:space="preserve">
-    <value>Name</value>
+  <data name="&gt;&gt;lblSuppliers.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="cboSearch.TabIndex" type="System.Int32, mscorlib">
     <value>32</value>
@@ -616,14 +616,11 @@
   <data name="cboSearch.Items3" xml:space="preserve">
     <value>Phone Number</value>
   </data>
-  <data name="btnSearch.Size" type="System.Drawing.Size, System.Drawing">
-    <value>32, 28</value>
-  </data>
   <data name="cboSearch.Location" type="System.Drawing.Point, System.Drawing">
     <value>475, 75</value>
   </data>
-  <data name="&gt;&gt;btnEdit.ZOrder" xml:space="preserve">
-    <value>6</value>
+  <data name="txtSearch.Location" type="System.Drawing.Point, System.Drawing">
+    <value>623, 77</value>
   </data>
   <data name="&gt;&gt;grdSup.Type" xml:space="preserve">
     <value>System.Windows.Forms.DataGridView, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -679,6 +676,9 @@
   <data name="&gt;&gt;lblResetFilters.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
+  <data name="&gt;&gt;lblResetFilters.Name" xml:space="preserve">
+    <value>lblResetFilters</value>
+  </data>
   <data name="&gt;&gt;btnSearch.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
@@ -688,20 +688,20 @@
   <data name="btnEdit.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 34</value>
   </data>
-  <data name="txtSearch.Location" type="System.Drawing.Point, System.Drawing">
-    <value>623, 77</value>
+  <data name="cboSearch.Items1" xml:space="preserve">
+    <value>Name</value>
   </data>
   <data name="&gt;&gt;txtSearch.Name" xml:space="preserve">
     <value>txtSearch</value>
   </data>
-  <data name="&gt;&gt;lblResetFilters.Name" xml:space="preserve">
-    <value>lblResetFilters</value>
+  <data name="btnSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 28</value>
   </data>
   <data name="txtSearch.Text" xml:space="preserve">
     <value>Search...</value>
   </data>
-  <data name="&gt;&gt;lblSuppliers.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="btnSearch.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
   </data>
   <data name="txtSearch.Size" type="System.Drawing.Size, System.Drawing">
     <value>172, 23</value>
@@ -726,5 +726,8 @@
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>vi-VN</value>
   </metadata>
 </root>
