--- a/CoffeeShopManager/GUI/UserControlSuppliers.vi-VN.resx
+++ b/CoffeeShopManager/GUI/UserControlSuppliers.vi-VN.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAdd.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnAdd.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -124,11 +128,26 @@
   <data name="btnAdd.Text" xml:space="preserve">
     <value>Thêm</value>
   </data>
+  <data name="txtSearch.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
+  <data name="txtSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 27</value>
+  </data>
+  <data name="cboSearch.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
   <data name="cboSearch.Items1" xml:space="preserve">
     <value>Tên</value>
   </data>
   <data name="cboSearch.Items3" xml:space="preserve">
     <value>SĐT</value>
+  </data>
+  <data name="cboSearch.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 27</value>
+  </data>
+  <data name="btnDelete.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
   </data>
   <data name="btnDelete.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
@@ -136,27 +155,40 @@
   <data name="btnDelete.Text" xml:space="preserve">
     <value>Xóa</value>
   </data>
+  <data name="btnEdit.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt</value>
+  </data>
   <data name="btnEdit.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="btnEdit.Text" xml:space="preserve">
     <value>Sửa</value>
   </data>
+  <data name="lblSuppliers.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 25.8000011pt</value>
+  </data>
   <data name="lblSuppliers.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblSuppliers.Location" type="System.Drawing.Point, System.Drawing">
+    <value>51, 55</value>
+  </data>
   <data name="lblSuppliers.Size" type="System.Drawing.Size, System.Drawing">
-    <value>401, 44</value>
+    <value>259, 102</value>
   </data>
   <data name="lblSuppliers.Text" xml:space="preserve">
-    <value>Danh sách nhà cung</value>
+    <value>Nhà cung cấp
+
+</value>
+  </data>
+  <data name="lblResetFilters.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 10.2pt, style=Underline</value>
   </data>
   <data name="lblResetFilters.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="lblResetFilters.Size" type="System.Drawing.Size, System.Drawing">
-    <value>109, 19</value>
+    <value>115, 19</value>
   </data>
   <data name="lblResetFilters.Text" xml:space="preserve">
     <value>Khởi tạo bộ lọc</value>
