--- a/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
+++ b/CoffeeShopManager/GUI/frmEditStockItem.vi-VN.resx
@@ -118,44 +118,92 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblRemoveFromList.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
   <data name="lblRemoveFromList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 19</value>
+    <value>108, 17</value>
   </data>
   <data name="lblRemoveFromList.Text" xml:space="preserve">
     <value>      Xóa khỏi list</value>
+  </data>
+  <data name="lblAddToList.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
   <data name="lblAddToList.Location" type="System.Drawing.Point, System.Drawing">
     <value>394, 317</value>
   </data>
   <data name="lblAddToList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 19</value>
+    <value>116, 17</value>
   </data>
   <data name="lblAddToList.Text" xml:space="preserve">
     <value>      Thêm vào list</value>
   </data>
+  <data name="btnCancel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
   <data name="btnCancel.Text" xml:space="preserve">
     <value>Hủy</value>
+  </data>
+  <data name="btnSave.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
   </data>
   <data name="btnSave.Text" xml:space="preserve">
     <value>Lưu</value>
   </data>
+  <data name="txtItemName.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="txtSupId.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="txtId.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="label5.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 174</value>
+  </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>94, 19</value>
+    <value>111, 17</value>
   </data>
   <data name="label5.Text" xml:space="preserve">
-    <value>ID nhà cung</value>
+    <value>ID nhà cung cấp</value>
+  </data>
+  <data name="label3.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 130</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>73, 19</value>
+    <value>69, 17</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>Tên hàng</value>
   </data>
+  <data name="lblListCaption.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
   <data name="lblListCaption.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 20</value>
+    <value>178, 17</value>
   </data>
   <data name="lblListCaption.Text" xml:space="preserve">
     <value>Danh sách sản phẩm dùng</value>
+  </data>
+  <data name="label2.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.8pt</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>20, 86</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>21, 17</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>269, 9</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>209, 21</value>
